# slam14_lecture

./: .gitmodules
chapter3/: CMakeLists.txt
chapter3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
chapter3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
chapter3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
chapter4/: CMakeLists.txt  useSophus.cpp
chapter4/example/: CMakeLists.txt  trajectoryError.cpp
chapter5/: CMakeLists.txt
chapter5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
chapter5/rgbd/: CMakeLists.txt  joinMap.cpp
chapter5/stereoVision/: CMakeLists.txt  stereoVision.cpp
chapter6/: CMakeLists.txt  ceresCurveFitting.cpp  ceresCurveFitting2.cpp  g2oCurveFitting.cpp  g2oCurveFitting2.cpp  gaussNewton.cpp
chapter7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  p10.1_pose_estimation_3d2d_ceres.cpp  p10.2_pose_estimation_3d3d_T12_ceres.cpp  p6_pose_estimation_3d2d_considerT1.cpp  p7_pose_estimation_3d3d_T12_considerP2.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d2d_considerT1.cpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d_T12.cpp  pose_estimation_3d3d_T12_considerP2.cpp  pose_estimation_3d3d_T21.cpp  triangulation.cpp
